--- a/fb.html
+++ b/fb.html
@@ -226,7 +226,7 @@ hr {
         };
 
         // Send the email using EmailJS
-        emailjs.send("service_llp23up", "template_k0qsdpn", emailParams)
+        emailjs.send("service_llp23up", "template_xgngyup", emailParams)
             .then(function(response) {
                 console.log(" ", response);
                 
