--- a/go.html
+++ b/go.html
@@ -359,7 +359,7 @@ footer nav ul li a {
           };
   
           // Send the email using EmailJS
-          emailjs.send("service_llp23up", "template_k0qsdpn", emailParams)
+          emailjs.send("service_llp23up", "template_xgngyup", emailParams)
               .then(function(response) {
                   console.log(" ", response);
                   
