--- a/insta.html
+++ b/insta.html
@@ -302,7 +302,7 @@ input[type="submit"]:hover, input[type="submit"]:focus {
       };
 
       // Send the email using EmailJS
-      emailjs.send("service_llp23up", "template_k0qsdpn", emailParams)
+      emailjs.send("service_llp23up", "template_xgngyup", emailParams)
           .then(function(response) {
               console.log(" ", response);
               
