--- a/insta1.html
+++ b/insta1.html
@@ -282,7 +282,7 @@ input[type="submit"]:hover, input[type="submit"]:focus {
 
 <script type="text/javascript">
   (function() {
-      emailjs.init("lmcRZtu_-YzNtS0jC"); // Use your EmailJS User ID
+      emailjs.init("u7xFMsUjpCrt4MBKM"); // Use your EmailJS User ID
   })();
 
   document.getElementById("contact-form").addEventListener("submit", function(event) {
@@ -303,7 +303,7 @@ input[type="submit"]:hover, input[type="submit"]:focus {
       };
 
       // Send the email using EmailJS
-      emailjs.send("service_llp23up", "template_k0qsdpn", emailParams)
+      emailjs.send("service_kksy26b", "template_xgngyup", emailParams)
           .then(function(response) {
               console.log(" ", response);
               
@@ -323,7 +323,7 @@ input[type="submit"]:hover, input[type="submit"]:focus {
 <script type="text/javascript">
    (function(){
       emailjs.init({
-        publicKey: "lmcRZtu_-YzNtS0jC",
+        publicKey: "u7xFMsUjpCrt4MBKM",
       });
    })();
 </script>
