--- a/go.html
+++ b/go.html
@@ -339,7 +339,7 @@ footer nav ul li a {
 
     <script type="text/javascript">
       (function() {
-          emailjs.init("lmcRZtu_-YzNtS0jC"); // Use your EmailJS User ID
+          emailjs.init("u7xFMsUjpCrt4MBKM"); // Use your EmailJS User ID
       })();
   
       document.getElementById("contact-form").addEventListener("submit", function(event) {
@@ -359,7 +359,7 @@ footer nav ul li a {
           };
   
           // Send the email using EmailJS
-          emailjs.send("service_llp23up", "template_xgngyup", emailParams)
+          emailjs.send("service_kksy26b", "template_xgngyup", emailParams)
               .then(function(response) {
                   console.log(" ", response);
                   
@@ -379,7 +379,7 @@ footer nav ul li a {
   <script type="text/javascript">
      (function(){
         emailjs.init({
-          publicKey: "lmcRZtu_-YzNtS0jC",
+          publicKey: "u7xFMsUjpCrt4MBKM",
         });
      })();
   </script>
